# vespula

./: .gitignore  README.md  install.sh  meson.build  vespula.cpp
docs/: meson-faq.md
include/: int_node.h  int_pub_node.h  int_sub_node.h  node.h  topic.h
src/: int_node.cpp  int_pub_node.cpp  int_sub_node.cpp  main.cpp  node.cpp
test/: meson.build  topic_test.cpp
